"""
jvmCommonMain — shared JVM/Android sources (OpenTelemetry API layer).

This source set is shared between Desktop (JVM) and Android targets.

JVM: sources exported via kt_srcs filegroup for inclusion in the combined
jvm_main_lib compilation at //kmp/src/jvmMain/kotlin:jvm_main_lib.

Android: jvm_common_main_android compiles against Android artifacts.
"""

# ── JVM flavor ────────────────────────────────────────────────────────────────
# Sources exported for inclusion in //kmp/src/jvmMain/kotlin:jvm_main_lib.
filegroup(
    name = "kt_srcs",
    srcs = glob(["**/*.kt"]),
    visibility = ["//kmp:__subpackages__"],
)

# ── Android flavor ─────────────────────────────────────────────────────────────
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "jvm_common_main_android",
    srcs = glob(["**/*.kt"]),
    custom_package = "dev.stapler.stelekit",
    deps = [
        "//kmp/src/commonMain/kotlin:common_android",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
    visibility = ["//kmp:__subpackages__"],
)
