genrule(
    name = "icon_icns",
    srcs = ["icon.png"],
    outs = ["icon.icns"],
    cmd = """
        set -e
        ICONSET=$$(mktemp -d)/icon.iconset
        mkdir -p $$ICONSET
        sips -z 16  16  $(SRCS) --out $$ICONSET/icon_16x16.png      > /dev/null
        sips -z 32  32  $(SRCS) --out $$ICONSET/icon_16x16@2x.png   > /dev/null
        sips -z 32  32  $(SRCS) --out $$ICONSET/icon_32x32.png      > /dev/null
        sips -z 64  64  $(SRCS) --out $$ICONSET/icon_32x32@2x.png   > /dev/null
        sips -z 128 128 $(SRCS) --out $$ICONSET/icon_128x128.png    > /dev/null
        sips -z 256 256 $(SRCS) --out $$ICONSET/icon_128x128@2x.png > /dev/null
        sips -z 256 256 $(SRCS) --out $$ICONSET/icon_256x256.png    > /dev/null
        sips -z 512 512 $(SRCS) --out $$ICONSET/icon_256x256@2x.png > /dev/null
        sips -z 512 512 $(SRCS) --out $$ICONSET/icon_512x512.png    > /dev/null
        iconutil -c icns $$ICONSET -o $@
    """,
)
